src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>NonProfessionalBillingsTotalB__c</fullName>
        <label>Non Professional Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonProfessionalHoursA__c</fullName>
        <label>Non Professional Hours (A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonProfessionalHoursB__c</fullName>
        <label>Non Professional Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonProfessionalHoursCM__c</fullName>
        <label>Non Professional Hours (CM)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODG__c</fullName>
        <inlineHelpText>ODG/ACOEM depending on state – QC will complete for NCM based on current diagnosis</inlineHelpText>
        <label>Evidence Based Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>Occupation</description>
        <label>Occupation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>All Child Cases</relationshipLabel>
        <relationshipName>AllChildCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginallyReferredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originally Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Originally Referred By)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherComments__c</fullName>
        <inlineHelpText>Provide detail for &apos;Other&apos; selection.</inlineHelpText>
        <label>Other Comment(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Special_Instructions__c</fullName>
        <description>Other Special Instructions:</description>
        <label>Other Special Instructions:</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OwnerAtCaseClose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>store who owned the case before it was closed and transferred to a queue</description>
        <label>OwnerAtCaseClose</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLEASE_PROVIDE_REASONS_FOR_REFERRAL__c</fullName>
        <inlineHelpText>This field has a 32,000 character maximum</inlineHelpText>
        <label>Please Provide Reason For Referral:</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_S_PTP_Discussion__c</fullName>
        <description>P&amp;S PTP Discussion</description>
        <label>P&amp;S PTP Discussion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_S_Target_Date__c</fullName>
        <description>P&amp;S Target Date</description>
        <label>P&amp;S Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Defense__c</fullName>
        <description>Phone (Defense)</description>
        <label>Phone (Defense)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Employee_Attorney__c</fullName>
        <description>Phone (Employee Attorney)</description>
        <label>Phone (Employee Attorney)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Employer__c</fullName>
        <description>Phone Employer</description>
        <inlineHelpText>Phone for Employer</inlineHelpText>
        <label>Phone (Employer)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Treating_Physician__c</fullName>
        <description>Phone (Treating Physician)</description>
        <label>Phone (Treating Physician)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Communication__c</fullName>
        <description>Preferred Method of Communication</description>
        <label>Preferred Method of Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>FAX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Provider_Optional__c</fullName>
        <description>Preferred Provider (Optional)</description>
        <label>Preferred Provider (Optional)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryCMMileage__c</fullName>
        <label>Primary CM Mileage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryCMProfHoursCredit__c</fullName>
        <label>Primary CM Prof. Hours Credit</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryCMProfHours__c</fullName>
        <label>Primary CM Prof. Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryCMTravelWaitHoursCredit__c</fullName>
        <label>Primary CM Travel/Wait Hours Credit</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryCMTravelWaitHours__c</fullName>
        <label>Primary CM Travel/Wait Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryProvidersNumber__c</fullName>
        <label># of Primary Providers?</label>
        <summaryFilterItems>
            <field>Healthcare_Provider__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Healthcare_Provider__c.ProviderStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Healthcare_Provider__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Campaign</description>
        <label>Primary Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <description>Primary Language</description>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>(Chinese) Mandarin</fullName>
                </value>
                <value>
                    <fullName>(Chinese) Cantonese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProfessionalBillingsTotalB__c</fullName>
        <label>Professional Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProfessionalHoursA__c</fullName>
        <label>Professional Hours (A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProfessionalHoursB__c</fullName>
        <label>Professional Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProfessionalHoursCM__c</fullName>
        <label>Professional Hours (CM)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Details__c</fullName>
        <label>Project Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QB_Service_Item__c</fullName>
        <description>QB Service Item</description>
        <label>QB Service Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ER</fullName>
                </value>
                <value>
                    <fullName>Ergo. Eval.</fullName>
                </value>
                <value>
                    <fullName>Interactive Process</fullName>
                </value>
                <value>
                    <fullName>EWT</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Job Analysis</fullName>
                </value>
                <value>
                    <fullName>LCP</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>Longshore-Voc</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>MCM-CAT</fullName>
                </value>
                <value>
                    <fullName>MCM-On Site</fullName>
                </value>
                <value>
                    <fullName>MCM-Tele</fullName>
                </value>
                <value>
                    <fullName>Mileage</fullName>
                </value>
                <value>
                    <fullName>Seminars</fullName>
                </value>
                <value>
                    <fullName>Soc. Service</fullName>
                </value>
                <value>
                    <fullName>TCM Triage</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Travel/Wait</fullName>
                </value>
                <value>
                    <fullName>VRC</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>RUSH-MCM-On Site</fullName>
                </value>
                <value>
                    <fullName>RUSH-Mileage</fullName>
                </value>
                <value>
                    <fullName>RUSH-Travel/Wait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QC_Input__c</fullName>
        <inlineHelpText>document QC&apos;s response to the kudos or error</inlineHelpText>
        <label>QC Input</label>
        <length>6144</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QC_Received__c</fullName>
        <inlineHelpText>How were we made aware of the kudos or error?</inlineHelpText>
        <label>Made aware by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&apos;B&apos;</fullName>
                </value>
                <value>
                    <fullName>Mentor review</fullName>
                </value>
                <value>
                    <fullName>Peer processing</fullName>
                </value>
                <value>
                    <fullName>CMA report</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QSU_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if a QSU is required after each appointment</description>
        <inlineHelpText>Check this box if a QSU is required after each appointment</inlineHelpText>
        <label>QSU Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QSU_Sent_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QSU Sent to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (QSU Sent to)</relationshipLabel>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RTW_Comments__c</fullName>
        <description>RTW Comments</description>
        <label>RTW Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Ergonomic Evaluation</fullName>
                </value>
                <value>
                    <fullName>Job Analysis</fullName>
                </value>
                <value>
                    <fullName>Interactive Process</fullName>
                </value>
                <value>
                    <fullName>Life Care Plan</fullName>
                </value>
                <value>
                    <fullName>Labor Market Survey</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Seminars</fullName>
                </value>
                <value>
                    <fullName>Expert Witness Testimony</fullName>
                </value>
                <value>
                    <fullName>Telephonic</fullName>
                </value>
                <value>
                    <fullName>DO NOT USE California-WC</fullName>
                </value>
                <value>
                    <fullName>DO NOT USE Nevada-WC</fullName>
                </value>
                <value>
                    <fullName>DO NOT USE Arizona-WC</fullName>
                </value>
                <value>
                    <fullName>DO NOT USE Ergo. Eval.</fullName>
                </value>
                <value>
                    <fullName>DO NOT USE EWT</fullName>
                </value>
                <value>
                    <fullName>DO NOT USE LMS</fullName>
                </value>
                <value>
                    <fullName>DO NOT USE LCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_from_CR_Rep_via__c</fullName>
        <label>Received Via:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call-In</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>USPS Mail</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReceivedresponsefromCM_Supervisor__c</fullName>
        <inlineHelpText>Indicate the date and time the CM Supervisor responded to initial email</inlineHelpText>
        <label>Received response from CM Supervisor</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReceivedsummaryfromCRRManager__c</fullName>
        <inlineHelpText>Date &amp; time received summary from CRR Manager</inlineHelpText>
        <label>Received summary from CRR Manager</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Referral Date</description>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(AssignmentRegion__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remain_U_C_w_Modifications__c</fullName>
        <description>Remain U&amp;C w/ Modifications</description>
        <label>Remain U&amp;C w/ Modifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remain_U_C_w_o_Modifications__c</fullName>
        <description>Remain U&amp;C w/o Modifications</description>
        <label>Remain U&amp;C w/o Modifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Restrictions_unchanged_because__c</fullName>
        <description>Restrictions unchanged because:</description>
        <label>Restrictions unchanged because:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Condition at Work</fullName>
                </value>
                <value>
                    <fullName>Condition with Employee</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restrictions_unchanged_comment__c</fullName>
        <description>Restrictions unchanged comment</description>
        <label>Restrictions unchanged comment:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RushMileageBillingsTotalB__c</fullName>
        <label>Rush Mileage Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RushMileageTotalB__c</fullName>
        <label>Rush Mileage Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RushNonProfessionalBillingsTotalB__c</fullName>
        <label>Rush Non Professional Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RushNonProfessionalHoursB__c</fullName>
        <label>Rush Non Professional Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RushProfessionalBillingsTotalB__c</fullName>
        <label>Rush Professional Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RushProfessionalHoursB__c</fullName>
        <label>Rush Professional Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rush_Indicator__c</fullName>
        <formula>IF( Rush__c = TRUE,IMAGE(&quot;/servlet/servlet.ImageServer?id=01580000000s9VD&amp;oid=00DT0000000FRlO&amp;lastMod=1247183073000&quot;, &quot;&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rush</description>
        <label>Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDL_Findings__c</fullName>
        <label>SDL Findings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDCTEST__c</fullName>
        <label>SFDCTEST</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>S_S_N_Web__c</fullName>
        <label>S.S.N</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_Mentor__c</fullName>
        <description>Senior Mentor</description>
        <label>Senior Mentor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Rate__c</fullName>
        <formula>IF(ISPICKVAL( Rate__c ,&quot;California&quot;),0,
IF(ISPICKVAL( Rate__c ,&quot;New Mexico&quot;),0.075,

NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervised_by__c</fullName>
        <description>Supervised by</description>
        <label>Supervised by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Denise Demianeau, RN, CCM</fullName>
                </value>
                <value>
                    <fullName>Catherine Kvasnicka, RN, MSN</fullName>
                </value>
                <value>
                    <fullName>Tanya Jutting-Loumakis, MA, CCM</fullName>
                </value>
                <value>
                    <fullName>Diane Campos, General Manager</fullName>
                </value>
                <value>
                    <fullName>Alysha Calderon</fullName>
                </value>
                <value>
                    <fullName>Senior Mentor</fullName>
                </value>
                <value>
                    <fullName>Angie Jung, RN, BSN, CRRN, CCM</fullName>
                </value>
                <value>
                    <fullName>Contractor - Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Whitney Boyles, RN, BSN, MS, CCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupervisorreceivedCMinput__c</fullName>
        <inlineHelpText>Date &amp; time when CM Supervisor received CM input.</inlineHelpText>
        <label>Supervisor received CM input</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>getfeedback.com survey - completed</inlineHelpText>
        <label>Survey-CP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_EE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>getfeedback.com survey - completed</inlineHelpText>
        <label>Survey-EE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_ER__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>getfeedback.com survey - completed</inlineHelpText>
        <label>Survey-ER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TTD_Explanation__c</fullName>
        <description>TTD Explanation</description>
        <label>TTD Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TTD_No__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TTD No</description>
        <label>TTD No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TTD_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TTD Yes</description>
        <label>TTD Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this Case is a Task Assignment</description>
        <inlineHelpText>Check this box if this Case is a Task Assignment</inlineHelpText>
        <label>Task Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Close_Date_Time__c</fullName>
        <label>Ticket Close Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticket_Open_Date_Time__c</fullName>
        <label>Ticket Open Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalExpenses__c</fullName>
        <label>Total Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMileageBillingsTotalA__c</fullName>
        <label>Total Mileage Billings Total (A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMileageBillingsTotalB__c</fullName>
        <label>Total Mileage Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMileageTotalA__c</fullName>
        <label>Total Mileage Total (A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMileageTotalB__c</fullName>
        <label>Total Mileage Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMileageTotalCM__c</fullName>
        <label>Total Mileage Total (CM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNonProfessionalBillingsTotalB__c</fullName>
        <label>Total NonProfessional Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalNonProfessionalHoursA__c</fullName>
        <label>Total Non Professional Hours (A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNonProfessionalHoursB__c</fullName>
        <label>Total Non Professional Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNonProfessionalHoursCM__c</fullName>
        <label>Total Non Professional Hours (CM)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfessionalBillingsTotalB__c</fullName>
        <label>Total Professional Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProfessionalHoursA__c</fullName>
        <label>Total Professional Hours (A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfessionalHoursB__c</fullName>
        <label>Total Professional Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfessionalHoursCM__c</fullName>
        <label>Total Professional Hours (CM)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRushMileageBillingsTotalB__c</fullName>
        <label>Total Rush Mileage Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRushMileageTotalB__c</fullName>
        <label>Total Rush Mileage Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRushNonProfBillingsTotalB__c</fullName>
        <label>Total Rush Non Prof Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRushNonProfessionalHoursB__c</fullName>
        <label>Total Rush Non Professional Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRushProfBillingsTotalB__c</fullName>
        <label>Total Rush Prof Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRushProfessionalHoursB__c</fullName>
        <label>Total Rush Professional Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Case_Time_Open__c</fullName>
        <formula>X1st_Time_Total_Days_Open__c + X2nd_Time_Total_Days_Open__c + X3rd_Time_Total_Days_Open__c + X4th_Time_Total_Days_Open__c + X5th_Time_Total_Days_Open__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Case Time Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced__c</fullName>
        <label>Total Invoiced</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TravelAuthorizationsLimitations__c</fullName>
        <label>Travel Authorizations/Limitations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treating_Physician_Address__c</fullName>
        <description>Treating Physician Address</description>
        <label>Treating Physician Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treating_Physician_City__c</fullName>
        <description>Treating Physician City</description>
        <label>Treating Physician City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>